changing to Double static method usage
Co-authored-by: Pablo Tirado <pablotr87@gmail.com>